--- a/index.html
+++ b/index.html
@@ -1,16 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="stylesheet.css">
 <meta charset="utf-8">
 <title></title>
 </head>
 <body>
-<h1>Odin Recipes</h1>
-<ul>
-<li><a href="recipes/arroz-moro.html">Arroz Moro</a></li>
-<li><a href="recipes/carne-guisada.html">Carne Guisada</a></li>
-<li><a href="recipes/dominican-oxtail.html">Dominican Oxtail</a></li>
-</ul>
+
+<div class="main-heading">
+    <h1>Odin Recipes</h1>
+</div>
+
+<div>
+    <ul class="grid-background">
+       
+        <li id="recipe-tile"><a href="recipes/arroz-moro.html">Arroz Moro</a></li>
+        <li id="recipe-tile"><a href="recipes/carne-guisada.html">Carne Guisada</a></li>
+        <li id="recipe-tile"><a href="recipes/dominican-oxtail.html">Dominican Oxtail</a></li>
+    
+    </ul>
+</div>
 
 
 
